# Gift-Card-Management-App

./: .gitignore  README.md  database.py  gift_card_app.py  image_handler.py  main_app.py  pyproject.toml  setup.py  ui_components.py
