[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gift-card-management"
version = "1.0.0"
description = "A PyQt6 application for managing gift cards with profit tracking"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "Topic :: Office/Business :: Financial",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "PyQt6>=6.4.0",
]

[project.scripts]
gift-card-app = "gift_card_app:main"

[project.urls]
Homepage = "https://github.com/yourusername/gift-card-management"
Repository = "https://github.com/yourusername/gift-card-management"
Issues = "https://github.com/yourusername/gift-card-management/issues"

[tool.setuptools]
packages = ["."]

[tool.setuptools.package-data]
"*" = ["*.md", "*.txt"] 